fdpg/bpe/server/depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fdpg-bpe-server
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector: {}
  template:
    metadata:
      labels:
        app.life.uni-leipzig.de/redundancy: none
        app.life.uni-leipzig.de/service-level: silver
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 2202
        fsGroupChangePolicy: "OnRootMismatch"
        runAsGroup: 2202
        runAsUser: 2202
      containers:
      - name: bpe
        image: ghcr.io/datasharingframework/bpe:2.1.0
        ports:
        - name: http
          containerPort: 8080
        - name: health
          containerPort: 10000
        volumeMounts:
        - name: dsf-creds
          mountPath: /run/secrets/creds/dsf
          readOnly: true
        - name: common-creds
          mountPath: /run/secrets/creds/common
          readOnly: true
        - name: ca-certs
          mountPath: /run/secrets/life-ca-certs
          readOnly: true
        - name: truststore
          mountPath: /run/secrets/truststore
        - name: process-plugins
          mountPath: /opt/bpe/process
        - name: debug-logs
          mountPath: /opt/bpe/log
        startupProbe:
          httpGet: &probe
            path: /bpe/status
            port: health
          failureThreshold: 24
          periodSeconds: 10
        readinessProbe:
          httpGet: *probe
        livenessProbe:
          httpGet: *probe
        resources:
          requests:
            cpu: "125m"
            memory: "2Gi"
          limits:
            memory: "2Gi"
      volumes:
      - name: dsf-creds
        secret:
          secretName: fdpg-dsf-creds
          items:
          - key: cert
            path: cert.pem
          - key: pkey
            path: key.pem
            mode: 0400
      - name: common-creds
        secret:
          secretName: credentials
          items:
          - key: FDPG_DSF_BPE_RD_HDS_CLIENT_SECRET
            path: fdpg_dsf_bpe_rd_hds_client_secret.password
            mode: 0400
      - name: ca-certs
        configMap:
          name: life-ca-certs
          items:
          - key: life-root-ca-2.pem
            path: life-root-ca-2.pem
      - name: process-plugins
        emptyDir: {}
      - name: download-plugins-script
        configMap:
          name: bpe-download-plugins-script
          defaultMode: 0555
      - name: truststore
        emptyDir: {}
      - name: debug-logs
        emptyDir: {}
