fdpg/bpe/server/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fdpg-bpe-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector: {}
